@@ -5705,4 +5705,7 @@ name)/mark
 /(?:((abcd))|(((?:(?:(?:(?:abc|(?:abcdef))))b)abcdefghi)abc)|((*ACCEPT)))/
     1234abcd
 
+/(\2|a)(\1)/
+    aaa
+
 # End of testinput1 
